# ones-mcp-cli

./: AGENTS.md  Cargo.toml  README.md  install.sh
src/: daemon.rs  main.rs  tests.rs  tool.rs
