[package]
name = "mcp-cli"
version = "0.0.4"
edition = "2024"

[[bin]]
name = "omc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
libc = "0.2.171"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.45.0", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8.20"
